@@ -1,8 +1,13 @@
+2007-12-24  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdesktopappinfo.c (g_desktop_app_info_launch): Fix the
+	environment handling.  (#504829, Cosimo Cecchi)
+
 2007-12-22  Matthias Clasen  <mclasen@redhat.com>
 
-	* gio/gappinfo.c: Doc improvements
+	* gappinfo.c: Doc improvements
 	
-	* gio/gdesktopappinfo.c (g_app_info_get_all): Return app infos,
+	* gdesktopappinfo.c (g_app_info_get_all): Return app infos,
 	not ids.
 
 2007-12-20  Matthias Clasen  <mclasen@redhat.com>
